# CG23

./: .gitignore  CMakeLists.txt  README.md
converter/: main.cpp
core/graphics/: color.cpp  color.hpp  image.cpp  image.hpp  image_reader.hpp  image_writer.hpp  image_writer_factory.hpp  ppm_image_writer.cpp  ppm_image_writer.hpp
core/graphics/image_io/: bmp_header.hpp  bmp_image_reader.cpp  bmp_image_reader.hpp  bmp_image_writer.cpp  bmp_image_writer.hpp  image_reader.hpp  image_reader_factory.cpp  image_reader_factory.hpp  image_writer_factory.cpp  png_image_reader.cpp  png_image_reader.hpp  ppm_image_reader.cpp  ppm_image_reader.hpp  ppm_image_writer.hpp
core/math/: aabb3.hpp  functions.hpp  matrix4.hpp  plane.hpp  ray.hpp  sphere.hpp  transform.hpp  triangle.hpp  vector2.hpp  vector3.hpp  vector4.hpp
core/primitives/: bvh_tree.hpp  hittable.hpp  mesh.hpp  plane.hpp  sphere.hpp  triangle.hpp
core/utils/: algorithms.hpp  args.hpp  clock.hpp  error.hpp  expected.hpp  int_iterator.hpp  random.hpp  types.hpp
raytracer/: main.cpp
raytracer/render/: base_renderer.cpp  base_renderer.hpp  camera.cpp  camera.hpp  console_renderer.cpp  console_renderer.hpp  image_renderer.cpp  image_renderer.hpp  light.hpp  obj_loader.cpp  obj_loader.hpp  scene.cpp  scene.hpp
sources/: main.cpp
sources/core/: expected.hpp  types.hpp
sources/core/math/: functions.hpp  hittable.hpp  plane.hpp  ray.hpp  sphere.hpp  vector2.hpp  vector3.hpp
sources/core/render/: camera.hpp  console_renderer.cpp  console_renderer.hpp  light.hpp  scene.hpp
sources/graphics/: color.hpp  image.hpp
sources/math/: hittable.hpp  plane.hpp  sphere.hpp  vector2.hpp  vector3.hpp
sources/render/: camera.hpp  console_renderer.cpp  console_renderer.hpp  light.hpp  scene.hpp
tests/: main.cpp
tests/core/math/: sphere.cpp  vector3.cpp
tests/math/: sphere.cpp  vector3.cpp
